[package]
name = "rei"
description = "a interface for manage repositories"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["commit","check"]
categories = ["development-tools"]
repository  = "https://github.com/otechdo/rei"
license = "AGPL-3"
[dependencies]
ratatui = { version = "0.28.1", features = ["palette", "all-widgets", "document-features", "macros"] }
tui-textarea = { version = "0.6.1", features = ["search", "ratatui"] }
crossterm = "0.28.1"
tera = "1.20.0"
serde = { version = "1.0.210", features = ["derive"] }

[features]
default = ["en"]
en = []
fr = []
es = []
it = []
